# wg_client_config_generator

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
src/util/: ConfigDelivery.py  Initialize.py
src/wg/: WireguardConfig.py
templates/: default.jinja2
